# Code-reviewer

./: .gitignore  .mira.yaml.example  CHANGELOG.md  Dockerfile  FEATURES.md  README.md  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml  docker-publish.yml  evals.yml  release.yml
scripts/: import_golden_comments.py  render_benchmark_charts.py  run_benchmark.py  test_all_endpoints.py
src/mira/: __init__.py  cli.py  config.py  dev_commands.py  models.py  outbound_webhooks.py
src/mira/core/: chunker.py  engine.py  ensemble.py  noise_filter.py  passes.py
src/mira/dashboard/: api.py  auth.py  db.py  models_config.py
src/mira/github_app/: auth.py  handlers.py  index_handlers.py
src/mira/index/: context.py  extract.py  indexer.py  jit_context.py  manifests.py  pg_store.py  store.py
src/mira/llm/: __init__.py  agentic_tools.py  base.py  bedrock.py  models.json  provider.py  registry.py  response_parser.py  utils.py
src/mira/llm/prompts/: footguns.py  review.py
src/mira/llm/prompts/templates/: security_review.jinja2
src/mira/providers/: github.py
src/mira/security/: osv.py
tests/: test_bedrock_provider.py  test_config.py  test_critique_grading.py  test_dedup_existing_threads.py  test_engine.py  test_ensemble.py  test_extract_go.py  test_extract_java.py  test_footguns.py  test_handlers.py  test_import_golden.py  test_index_indexer.py  test_indexing_cancel.py  test_integration.py  test_jit_context.py  test_llm_provider.py  test_manifests.py  test_merge_learning.py  test_model_registry.py  test_models_config_thinking.py  test_noise_filter.py  test_outbound_webhooks.py  test_password_change.py  test_response_parser.py  test_security.py  test_upsert_duplicate_symbols.py  test_user_last_login.py
tests/benchmarks/: ground_truth.json  judge.py  runner.py  test_f1_benchmark.py  test_judge_unit.py
tests/evals/: test_eval_bedrock.py  test_eval_learning.py  test_eval_llm.py
tests/fixtures/: sample_llm_response.json
ui/mira/: package-lock.json  package.json
ui/mira/src/: App.tsx  index.css  main.tsx
ui/mira/src/components/: password-form.tsx
ui/mira/src/components/dashboard/: dependencies-table.tsx  layout.tsx
ui/mira/src/components/ui/: collapsible.tsx  confirm-button.tsx  confirm-dialog.tsx  dropdown-menu.tsx  sidebar.tsx  sonner.tsx  tooltip.tsx  user-avatar.tsx
ui/mira/src/lib/: api.ts  hooks.ts
ui/mira/src/lib/api/: http.ts  packages.ts  relationships.ts  repos.ts  rules.ts  settings.ts  stats.ts  system.ts  types.ts  users.ts  vulnerabilities.ts  webhooks.ts
ui/mira/src/pages/: activity.tsx  change-password.tsx  dashboard.tsx  learned-rules.tsx  login.tsx  packages.tsx  relationships.tsx  repo-detail.tsx  repos.tsx  reset-user-password.tsx  rules.tsx  settings.tsx  setup.tsx  user-form.tsx  users.tsx  vulnerabilities.tsx  webhook-form.tsx  webhooks.tsx
