[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mira-reviewer"
version = "0.3.0"
description = "AI-powered PR reviewer with low-noise filtering"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Mira Contributors", email = "support@miracode.ai" }]
keywords = ["ai", "code-review", "pull-request", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pydantic>=2.5",
    "PyGithub>=2.1",
    "pyyaml>=6.0",
    "tenacity>=8.2",
    "tiktoken>=0.6",
    "unidiff>=0.7",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "pre-commit>=3.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "types-PyYAML>=6.0",
    "cryptography>=42.0",
]
serve = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.28",
    "PyJWT[crypto]>=2.8",
    # Postgres driver — used when DATABASE_URL is set. Optional at runtime
    # (SQLite is the default), but bundled so the Docker image works with
    # either backend out of the box.
    "psycopg[binary]>=3.1",
]
bedrock = [
    "boto3>=1.35",
]

[project.scripts]
mira = "mira.cli:main"

[project.urls]
Homepage = "https://github.com/miracodeai/mira"
Repository = "https://github.com/miracodeai/mira"
Issues = "https://github.com/miracodeai/mira/issues"
Changelog = "https://github.com/miracodeai/mira/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/mira"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "eval: regression suite that hits real GitHub + LLM APIs (skipped by default; opt-in with `-m eval`)",
    "benchmark: noisy, threshold-based quality evals (e.g. the F1 scorecard) — tracked, not a release gate. Run with `-m benchmark`.",
]
addopts = "-m 'not eval and not benchmark'"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
# Test fixtures intentionally mirror real-world (sometimes ugly) third-party
# code; lint/format on them adds nothing.
extend-exclude = ["tests/fixtures/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "PIE", "RET", "T20"]
# Long lines — formatter already chooses where to wrap; ruff catches strings/URLs
# that aren't worth manually splitting.
ignore = [
    "E501",   # line too long (formatter handles this)
    "PIE810", # multiple .startswith — pre-existing, not worth refactoring
    "RET504", # unnecessary assignment before return — readability preference
    "N806",   # uppercase var in function — common for tunable constants
    "N818",   # exception name should end with Error (we use IndexingCancelled deliberately)
]

[tool.ruff.lint.per-file-ignores]
# Helper scripts use print() as their primary output mechanism.
"scripts/**" = ["T20"]
# Tests routinely have unused vars (fixtures, intentional throwaways), and
# eval scripts intentionally print results to stdout.
"tests/**" = ["F841", "B007", "T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
# Strict mode is the goal but the codebase isn't there yet — enabling it
# surfaces ~260 errors, mostly `Missing type parameters for generic type
# "dict"` and decorator/assignment edge cases. We'll tighten module-by-
# module rather than block every commit on a project-wide cleanup. New
# additions should still be well-typed; CI catches regressions in
# practice via the test suite.
strict = false
ignore_missing_imports = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["unidiff.*", "github.*", "uvicorn.*", "fastapi.*", "jwt.*"]
ignore_missing_imports = true
